--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,9 @@ code {
   padding: 0;
 }
 
-.container {
-  max-width: 1000px;
-  margin: 30px auto;
+.container-kl {
+  max-width: 80%;
+  margin: 20px auto;
   overflow: auto;
   min-height: 300px;
   border: 1px solid steelblue;
@@ -27,13 +27,25 @@ code {
 
 .header {
   display: grid;
-  margin-bottom: 30px;
+  margin: 10px auto;
   text-align: center;
 }
 
-.btn {
+.updater {
+  align-items: center;
+  padding-bottom: 40px;
+  text-align: center;
+}
+
+.about {
+  margin: 50px auto;
+  max-width: 600px;
+  text-align: center;
+}
+
+.btn-kl {
   display: inline-block;
-  background: #000;
+  background: steelblue;
   color: #fff;
   border: none;
   padding: 10px 20px;
@@ -58,65 +70,14 @@ code {
   width: 100%;
 }
 
-.task {
-  background: #f4f4f4;
-  margin: 5px;
-  padding: 10px 20px;
-  cursor: pointer;
-}
-
-.task.reminder {
-  border-left: 5px solid green;
-}
-
-.task h3 {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.add-form {
-  margin-bottom: 40px;
-}
-
-.form-control {
-  margin: 20px 0;
-}
-
-.form-control label {
-  display: block;
-}
-
-.form-control input {
-  width: 100%;
-  height: 40px;
-  margin: 5px;
-  padding: 3px 7px;
-  font-size: 17px;
-}
-
-.form-control-check {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.form-control-check label {
-  flex: 1;
-}
-
-.form-control-check input {
-  flex: 2;
-  height: 20px;
-}
-
-.potential {
-  align-items: flex-end;
-}
-
 .footer {
-  margin-top: 30px;
+  margin-top: 50px;
   text-align: center;
 }
 
+@media (max-width: 768px) {
+  .container-kl {
+    max-width: 95%;
+  }
+}
 
